@@ -1,6 +1,6 @@
 /*******************************************************************************
     Creme is a free/open-source Customer Relationship Management software
-    Copyright (C) 2009-2018  Hybird
+    Copyright (C) 2009-2020  Hybird
 
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU Affero General Public License as published by
@@ -501,7 +501,7 @@ creme.dialog.Dialog = creme.component.Component.sub({
             return this._dialog.dialog('option', 'title');
         }
 
-        this._dialog.dialog('option', 'title', title);
+        this._dialog.dialog('option', 'title', String(title).unescapeHTML());
         return this;
     },
 
@@ -568,9 +568,10 @@ creme.dialog.Dialog = creme.component.Component.sub({
         var draggable = is_framescroll ? options.draggable : false;
         var width = options.minWidth > 0 ? Math.max(options.minWidth, options.width) : options.width;
         var height = options.minHeight > 0 ? Math.max(options.minHeight, options.height) : options.height;
+        var title = options.title ? String(options.title).unescapeHTML() : options.title;
 
         this._dialog = content.dialog({buttons:   Object.values(buttons),
-                                       title:     options.title,
+                                       title:     title,
                                        modal:     true,
                                        resizable: resizable,
                                        draggable: draggable,
